--- a/components/oscillator_logic/CMakeLists.txt
+++ b/components/oscillator_logic/CMakeLists.txt
@@ -2,5 +2,5 @@ idf_component_register(
     SRCS "oscillator_logic.c"
     INCLUDE_DIRS "include"
     REQUIRES oscillator
-    PRIV_REQUIRES logical_ops output
+    PRIV_REQUIRES logical_ops output timer
 ) 
