--- a/components/oscillator/CMakeLists.txt
+++ b/components/oscillator/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(
     SRCS "oscillator.c"
     INCLUDE_DIRS "include"
-    REQUIRES esp_common
+    REQUIRES esp_common common_defs
 )
 
