web server refactored to api; new common defs;

--- a/components/web_server/CMakeLists.txt
+++ b/components/web_server/CMakeLists.txt
@@ -1,9 +1,24 @@
 idf_component_register(
-    SRCS "web_server.c" "api.c"
-    INCLUDE_DIRS "include"
-    REQUIRES esp_http_server esp_common json
-    PRIV_REQUIRES oscillator oscillator_logic
-    EMBED_FILES "static/index.html" "static/scripts.js" "static/value-control.js" "static/value-control.css" "static/style.css"
+    SRCS 
+        "web_server.c"
+    INCLUDE_DIRS 
+        "include"
+    REQUIRES 
+        esp_http_server
+        json
+        api
+        common_defs   
+    EMBED_FILES 
+        "static/index.html" 
+        "static/scripts.js" 
+        "static/value-control.js" 
+        "static/value-control.css" 
+        "static/style.css"    
+)
+
+# Set logging level for the web server component
+target_compile_definitions(${COMPONENT_LIB} PRIVATE
+    -DCONFIG_LOG_MAXIMUM_LEVEL=ESP_LOG_INFO
 )
 
 # Embed web files
