logic operatorbackend; fixes

--- a/components/oscillator_logic/CMakeLists.txt
+++ b/components/oscillator_logic/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(
     SRCS "oscillator_logic.c"
     INCLUDE_DIRS "include"
-    REQUIRES oscillator
-    PRIV_REQUIRES logical_ops output timer
+    REQUIRES oscillator logical_ops
+    PRIV_REQUIRES output timer
 ) 
