added CORS support for all api; fixed get/post feedback; added loading state visualisation;

--- a/components/web_server/CMakeLists.txt
+++ b/components/web_server/CMakeLists.txt
@@ -23,7 +23,7 @@ idf_component_register(
         "static/lunette/dist/index.js" 
         "static/lunette/dist/index.css" 
         "static/lunette/dist/worklets/audio-worklet.js"
-        "static/lunette/dist/worklets/reverb-algo-worklet.js"
+        "static/lunette/dist/vite.svg"
     EMBED_TXTFILES
         "certs/certificate.pem"
         "certs/private_key.pem"
