oscillator apihook refactored to provider; added pianokeyboard component; added keyboard screen; added global styles;

--- a/components/web_server/static/lunette/tsconfig.app.json
+++ b/components/web_server/static/lunette/tsconfig.app.json
@@ -34,7 +34,8 @@
       "@worklets/*": ["public/worklets/*"],
       "@api/*": ["src/api/*"],
       "@utils/*": ["src/utils/*"],
-      "@algorithm/*": ["src/algorithm/*"]
+      "@algorithm/*": ["src/algorithm/*"],
+      "@contexts/*": ["src/contexts/*"]
     }
   },
   "include": ["src"]
