--- a/components/web_server/static/lunette/tsconfig.app.json
+++ b/components/web_server/static/lunette/tsconfig.app.json
@@ -35,7 +35,8 @@
       "@api/*": ["src/api/*"],
       "@utils/*": ["src/utils/*"],
       "@algorithm/*": ["src/algorithm/*"],
-      "@contexts/*": ["src/contexts/*"]
+      "@contexts/*": ["src/contexts/*"],
+      "@screens/*": ["src/screens/*"]
     }
   },
   "include": ["src"]
