added envelop code; addedautomated params list to all effects; added effect context; added sequencer control, class, menu, screen;

--- a/components/web_server/static/lunette/tsconfig.app.json
+++ b/components/web_server/static/lunette/tsconfig.app.json
@@ -36,7 +36,8 @@
       "@utils/*": ["src/utils/*"],
       "@algorithm/*": ["src/algorithm/*"],
       "@contexts/*": ["src/contexts/*"],
-      "@screens/*": ["src/screens/*"]
+      "@screens/*": ["src/screens/*"],
+      "@interfaces/*": ["src/interfaces/*"]
     }
   },
   "include": ["src"]
